--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,61 @@
+@font-face {
+  font-family: 'montserrat';
+  src: url('../Montserrat-VariableFont_wght.ttf');
+}
+
 * {
   margin: 0;
   box-sizing: border-box;
-  background-color: whitesmoke;
-  color: black;
+  font-family: 'montserrat';
 }
-
+/* main page */
 main {
+  display: flex;
+  flex-direction: column;
   padding: 1rem;
   height: 100vh;
+  background-color:rgb(3, 6, 48);
+  color: white;
+}
+main h1, h2{
+  justify-content: center;
+  align-self: center;
+  text-shadow: 0px 0px 10px silver;
+}
+main h1 {
+  font-size: 4.5em;
+}
+main h2 {
+  font-size: 2.5em;
+}
+
+.mainPage {
+  color: white;
+  width: 25%;
+  margin-left: 2%;
+}
+.dropdown *{
+  font-size: 1.5em;
+  background-color: darkcyan;
+  padding: 0.8%;
+  border-radius: 10px;
+  width: fit-content;
+}
+.dropbtn {
+  font-size: 2.2em;
+  width: 50%;
+  color: white;
+  margin-left: 2%;
+  margin-top: 5%;
 }
 
 .articleTitle {
-  background-color: red;
+  padding: 1%;
+  border: solid white;
+  font-size: 2.2em;
+  margin: 2%;
+  background-color: darkcyan;
+  border-radius: 10px;
 }
 
 .articleTitle:hover {
