--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,7 @@ main h1 {
   font-size: 4.5em;
 }
 main h2 {
-  font-size: 2.5em;
+  font-size: 2.3em;
 }
 
 .mainPage {
@@ -36,17 +36,22 @@ main h2 {
 }
 .dropdown *{
   font-size: 1.5em;
-  background-color: darkcyan;
-  padding: 0.8%;
+  padding: 1%;
   border-radius: 10px;
   width: fit-content;
+  background-color: rgb(36, 9, 155);
+  margin-left:.5%;
+}
+.dropdown-content {
+  width: 23.7%;
 }
 .dropbtn {
   font-size: 2.2em;
-  width: 50%;
+  width: 95.8%;
   color: white;
   margin-left: 2%;
   margin-top: 5%;
+  background-color: rgb(36, 9, 155);
 }
 
 .articleTitle {
@@ -54,12 +59,11 @@ main h2 {
   border: solid white;
   font-size: 2.2em;
   margin: 2%;
-  background-color: darkcyan;
   border-radius: 10px;
 }
 
 .articleTitle:hover {
-  background-color: aqua;
+  background-color: rgb(36, 9, 155)
 }
 
 .dropdown-content {
@@ -73,9 +77,76 @@ main h2 {
 
 .dropdown-content p:hover {
   display: block;
-  background-color: bisque;
+  background-color: rgb(48, 11, 212)
 }
 
 .dropdown:hover .dropdown-content {
   display:block;
+}
+
+
+.article {
+  display: flex;
+  flex-direction: column; 
+  margin-left: 2%;
+}
+.article * {
+  padding:0.2%;
+}
+.singlePageButtons{
+  display:flex;
+  justify-content: center;
+}
+.articleButton {
+  padding: 0.5%;
+  font-size: 1.2em;
+  margin: 0 1%;
+  align-items: space-around;
+}
+.pageContent {
+  font-size: 1.5em;
+  border: solid white;
+  border-radius: 10px;
+  padding:0.5%;
+  margin: 1% 0;
+  width: 95%
+}
+
+.newPageForm{
+  margin-left: 2%;
+  font-size: 2em;
+  display:flex;
+  flex-direction: column;
+  align-items: space-between;
+  width:90%;
+  border: solid white;
+  border-radius: 10px;
+  padding: 0.5%;
+  justify-self: center;
+  align-self: center;
+}
+.newPageForm input{
+  padding: .2%;
+  font-size: 1em;
+  margin-left: 0.5%;
+  width:90%;
+}
+.newPageForm .formSubheader{
+  margin: 1% 2%;
+}
+.newPageForm .formRow{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 1% 2%;
+}
+.newPageForm button {
+  font-size: .8em;
+  margin: 1% 1%;
+  padding: 1%;
+}
+.newPageForm .buttons{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-around;
 }
